--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.1",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5"
   },
