--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.1",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.5.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
