prepare for deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "github-card-component",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://headinclouds.github.io/github-card-component/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.5.1",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.5.1",
@@ -13,9 +15,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "gh-pages": "^2.0.1"
   }
 }
